--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rosania Santos</title>
     <link rel="stylesheet" href="./style.css" type="text/css">
+    <style>
+      @font-face{
+      font-family: monte;
+      src: url(../Fonts/Montserrat-VariableFont_wght.ttf);
+      }
+    </style>
 </head>
 <body>
     <main>
