--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     href="https://fonts.google.com/specimen/Montserrat?query=mon"
     rel="stylesheet"/>
     <style>
+        @font-face {
+        font-family: monte;
+        src: url(/Fonts/Montserrat-VariableFont_wght.ttf);
+      }
 
     </style>
 </head>
