section vovó finalizado

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section>
             <div class="santos">
                 <div id="h1"><h1>Rosania Santos</h1></div>
-                <div><p>Costureira apaixonada pelo seu trabalho, com 40 anos de experiência na área da costura. Recentemente, ela decidiu reabrir seu ateliê de costura para retomar sua paixão e se dedicar novamente a criar peças únicas e de alta qualidade para seus clientes. Rosania é uma verdadeira inspiração e seu amor pela profissão é evidente em cada projeto que ela realiza.</p>
+                <div id="p"><p>Costureira apaixonada pelo seu trabalho, com 40 anos de experiência na área da costura. Recentemente, ela decidiu reabrir seu ateliê de costura para retomar sua paixão e se dedicar novamente a criar peças únicas e de alta qualidade para seus clientes. Rosania é uma verdadeira inspiração e seu amor pela profissão é evidente em cada projeto que ela realiza.</p>
                 </div>
             </div>
             
