--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@
             <div class="container">
                 <div class="imagem1"></div>
             </div>
+        </section>
+        <div class="linha"></div>
+        <section class="elegancia">
+            <div class="eleg">
+                <h1 class="eleg"> Elegância</h1>
+            </div>
+            <div class="ele"></div>
+            <div class="ele1"></div>
+            <div class="ele3"></div>
+            <div class="ele4"></div>
+
+            <div class="valores">
+                <div id="ele">
+                    <h4>Flora</h4>
+                    <p>R$199,90</p>
+                </div>
+                <div id="ele1">
+                    <h4>Verbena</h4>
+                    <p>R$199,90</p>
+                </div>
+                <div id="ele3"></div>
+                <div id="ele4"></div>
+            </div>
             
         </section>
     </main>
