--- a/index.html
+++ b/index.html
@@ -61,8 +61,15 @@
                     <h4>Verbena</h4>
                     <p>R$199,90</p>
                 </div>
-                <div id="ele3"></div>
-                <div id="ele4"></div>
+                <div id="ele3">
+                    <h4>Azaléia</h4>
+                    <p>R$189,90</p>
+                </div>
+                <div id="ele4">
+                    <h4>Camélia</h4>
+                    <p>R$199,90</p>
+                </div>
+                    <button id="ele5">Veja mais</button>
             </div>
             
         </section>
