--- a/index.html
+++ b/index.html
@@ -71,8 +71,17 @@
                 </div>
                     <button id="ele5">Veja mais</button>
             </div>
-            
         </section>
+        <div class="linha"></div>
+        <section class="container2">
+            <div id="gabriela"></div>
+            <div id="gab">
+                <h1 id="h11">Gabriela Silva</h1>
+                <p id="pp">Vestido hortência</p>
+                <button id="gab5">Veja mais</button>
+            </div>
+        </section>
+        <div class="linha"></div>
     </main>
     
 </body>
