--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <div class="valores">
                 <div id="ele">
                     <h4>Flora</h4>
-                    <p>R$199,90</p>
+                    <p>R$ 199,90</p>
                 </div>
                 <div id="ele1">
                     <h4>Verbena</h4>
-                    <p>R$199,90</p>
+                    <p>R$ 199,90</p>
                 </div>
                 <div id="ele3">
                     <h4>Azaléia</h4>
-                    <p>R$189,90</p>
+                    <p>R$ 189,90</p>
                 </div>
                 <div id="ele4">
                     <h4>Camélia</h4>
-                    <p>R$199,90</p>
+                    <p>R$ 199,90</p>
                 </div>
                     <button id="ele5">Veja mais</button>
             </div>
@@ -82,6 +82,36 @@
             </div>
         </section>
         <div class="linha"></div>
+        <section class="charme">
+            <div class="charm">
+                <h1 class="char"> Charme</h1>
+            </div>
+            <div class="ela"></div>
+            <div class="ela1"></div>
+            <div class="ela3"></div>
+            <div class="ela4"></div>
+
+            <div class="valores1">
+                <div id="elee1">
+                    <h4>Hibisco</h4>
+                    <p>R$ 99,90</p>
+                </div>
+                <div id="ele11">
+                    <h4>Íris</h4>
+                    <p>R$ 139,90</p>
+                </div>
+                <div id="ele33">
+                    <h4>Gardênia</h4>
+                    <p>R$ 99,90</p>
+                </div>
+                <div id="ele44">
+                    <h4>Tulipa</h4>
+                    <p>R$ 119,90</p>
+                </div>
+                    <button id="ele55">Veja mais</button>
+            </div>
+        </section>
+        
     </main>
     
 </body>
