--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     <button id="ele55">Veja mais</button>
             </div>
         </section>
+        <div class="linha"></div>
         
     </main>
     
