--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
             </div>
         </section>
         <div class="linha"></div>
+        <section class="container3">
+            <div id="amara"></div>
+            <div id="ama">
+                <h1 id="h111">Amara Lopez</h1>
+                <p id="ppp">Vestido Magnólia</p>
+                <button id="ama5">Veja mais</button>
+            </div>
+        </section>
+        <div class="linha"></div>
         
     </main>
     
