--- a/index.html
+++ b/index.html
@@ -121,6 +121,45 @@
             </div>
         </section>
         <div class="linha"></div>
+        <section class="parte_cima">
+            <div class="cima">
+                <h1 class="cim"> Parte de cima</h1>
+            </div>
+            <div class="eli"></div>
+            <div class="eli1"></div>
+            <div class="eli3"></div>
+            <div class="eli4"></div>
+
+            <div class="valores2">
+                <div id="eli1">
+                    <h4>Moréia</h4>
+                    <p>R$ 99,90</p>
+                </div>
+                <div id="eli11">
+                    <h4>Lotus</h4>
+                    <p>R$ 99,90</p>
+                </div>
+                <div id="eli33">
+                    <h4>Margarida</h4>
+                    <p>R$ 99,90</p>
+                </div>
+                <div id="eli44">
+                    <h4>Orquídea</h4>
+                    <p>R$ 99,90</p>
+                </div>
+                    <button id="eli55">Veja mais</button>
+            </div>
+        </section>
+        <div class="linha"></div>
+        <section class="container4">
+            <div id="larissa"></div>
+            <div id="lari">
+                <h1 id="h12">Larissa Ramos</h1>
+                <p id="p2">Cropped Rosa</p>
+                <button id="lari5">Veja mais</button>
+            </div>
+        </section>
+        <div class="linha"></div>
         
     </main>
     
