Página principal finalizada

--- a/index.html
+++ b/index.html
@@ -216,6 +216,28 @@
         </section>
         <div class="linha"></div>
     </main>
+    <footer>
+        <div class="logo_footer">
+            <h1>Rosania <br />Santos</h1>
+        </div>
+        <div class="informacoes">
+            <h3>Venha nos conhecer:</h3>
+            <br />
+                <p>Atendemos de<br />Segunda à Sexta das 08:00 a 18h.</p>
+                <br />
+                <p>Nosso número <br />+55 (11) 94971-9644.</p>
+        </div>
+        <div class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3659.8796670441875!2d-46.42994932536193!3d-23.4648046580506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce623af8b869cf%3A0xebecdc57e8527528!2sAv.%20Roteiro%2C%20255%20-%20Jardim%20Dona%20Luiza%2C%20Guarulhos%20-%20SP%2C%2007270-520!5e0!3m2!1spt-BR!2sbr!4v1682086805206!5m2!1spt-BR!2sbr" width="400" height="250" style="border-radius:10px;
+            border-color: #FF3E00;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="linha"></div>
+        <div class="final">
+            <p>@2023 RosaniaSantosTerms of Service · Privacy Policy</p>
+        </div>
+
+        
+    </footer>
     
 </body>
 </html>
