--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
 
             <div class="valores3">
                 <div id="elo1">
-                    <h4>Moréia</h4>
-                    <p>R$ 99,90</p>
+                    <h4>Dália</h4>
+                    <p>R$ 139,90</p>
                 </div>
                 <div id="elo11">
-                    <h4>Lotus</h4>
+                    <h4>Ivy</h4>
                     <p>R$ 99,90</p>
                 </div>
                 <div id="elo33">
-                    <h4>Margarida</h4>
+                    <h4>Acácia</h4>
                     <p>R$ 99,90</p>
                 </div>
                 <div id="elo44">
-                    <h4>Orquídea</h4>
+                    <h4>Magnólia</h4>
                     <p>R$ 99,90</p>
                 </div>
                     <button id="elo55">Veja mais</button>
