--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <h1>Rosania Santos</h1>
             <nav class="nav" id="nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Pokédex</a></li>
-                    <li><a href="#">Pokeballs</a></li>
-                    <li><a href="#">Pokenet</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Elegância</a></li>
+                    <li><a href="#">Charme</a></li>
+                    <li><a href="#">P. cima</a></li>
+                    <li><a href="#">P. baixo</a></li>
+                    <li><a href="#">Frete</a></li>
                   </ul>
             </nav>
             <div class="fast">
@@ -73,6 +73,7 @@
                     <h4>Camélia</h4>
                     <p>R$ 199,90</p>
                 </div>
+                
                     <button id="ele5">Veja mais</button>
             </div>
         </section>
@@ -268,6 +269,16 @@
         
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
 </body>
     <script>
   AOS.init();
