--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#">Charme</a></li>
                     <li><a href="#">P. cima</a></li>
                     <li><a href="#">P. baixo</a></li>
-                    <li><a href="#">Frete</a></li>
+                    <li><a href="Usuario/index.html">Usuário</a></li>
                   </ul>
             </nav>
             <div class="fast">
