--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
                     <li><a href="#">Charme</a></li>
                     <li><a href="#">P. cima</a></li>
                     <li><a href="#">P. baixo</a></li>
-                    <li><a href="Usuario/index.html">Usuário</a></li>
                   </ul>
             </nav>
             <div class="fast">
-                <i class="fa-solid fa-user fa-2x"></i>
+                <a href="Usuario/index.html"><i class="fa-solid fa-user fa-2x"></i></a>
                 <i class="fa-solid fa-cart-shopping fa-2x"></i>
             </div>
         </header>
