--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <h1>Rosania Santos</h1>
             <nav class="nav" id="nav">
                 <ul>
-                    <li><a href="#">Elegância</a></li>
-                    <li><a href="#">Charme</a></li>
-                    <li><a href="#">P. cima</a></li>
-                    <li><a href="#">P. baixo</a></li>
+                    <li><a href="#elegancia">Elegância</a></li>
+                    <li><a href="#charme">Charme</a></li>
+                    <li><a href="#parte_cimaa">P. cima</a></li>
+                    <li><a href="#parte_baixoo">P. baixo</a></li>
                   </ul>
             </nav>
             <div class="fast">
@@ -43,7 +43,7 @@
             </div>
         </section>
         <div class="linha"></div>
-        <section class="elegancia">
+        <section class="elegancia" id="elegancia">
             <div data-aos="fade-right" style="transition: 2.2s;">
                 <div class="eleg">
                     <h1 class="eleg"> Elegância</h1>
@@ -90,7 +90,7 @@
             
         </section>
         <div class="linha"></div>
-        <section class="charme">
+        <section class="charme" id="charme">
             <div data-aos="fade-right" style="transition: 2.2s;">
                 <div class="charm">
                     <h1 class="char"> Charme</h1>
@@ -135,7 +135,7 @@
             
         </section>
         <div class="linha"></div>
-        <section class="parte_cima">
+        <section class="parte_cima" id="parte_cimaa">
             <div data-aos="fade-right" style="transition: 2.2s;">
                 <div class="cima">
                     <h1 class="cim"> Parte de cima</h1>
@@ -179,7 +179,7 @@
             </div>
         </section>
         <div class="linha"></div>
-        <section class="parte_baixo">
+        <section class="parte_baixo" id="parte_baixoo">
             <div data-aos="fade-right" style="transition: 2.2s;">
                 <div class="baixo">
                     <h1> Parte de baixo</h1>
